--- a/plot_trees.ipynb
+++ b/plot_trees.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot phylogenetic trees"
+    "# Plot phylogenetic trees\n",
+    "\n",
+    "The trees were generated with IQ-TREE, the alignment files are quite big (not only SNPs, but whole genomes) and thus I didn't add them here. \n",
+    "\n",
+    "```\n",
+    "iqtree -redo -nt 8 -s all_sequences.aln -m HKY+G\n",
+    "```"
    ]
   },
   {
